@@ -1,3 +1,6 @@
+4/12/11
+  Dessktops in the desktop switcher can be named from the config file
+
 1/12/11
   Colours and font are now read from a rc file and can be update with a keyboard shortcut
 
